tabbox: dismiss popups in the right order

BUG: 446318